# Mobile-Dashcam

./: .gitignore  README.md  pyproject.toml
backend/: server.py
backend/API/: server.py
backend/models/YOLO/: test_yolo.py
backend/models/mobileNetV2/: test_mobileNetV2.py
backend/models/zero_DCE/: lowlight_test.py
backend/models/zero_DCE_plus/: lowlight_test.py
backend/service/: constants.py  execute_object_classification.py
frontend/: app.json  package-lock.json  package.json  settings.gradle.kts
frontend/app/: build.gradle.kts
frontend/app/(tabs)/: index.tsx
frontend/app/src/androidTest/java/com/adrian/tsr_app/: ExampleInstrumentedTest.kt
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/java/com/adrian/tsr_app/: BoundingBox.kt  MainActivity.kt  MyWebSocketListener.kt  OverlayView.kt  TemporarySigns.kt  WebSocketCallback.kt  WebSocketManager.kt
frontend/app/src/main/java/com/adrian/tsr_app/ui/theme/: Color.kt  Theme.kt  Type.kt
frontend/app/src/main/res/layout/: activity_main.xml
frontend/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
frontend/app/src/main/res/xml/: network_security_config.xml
frontend/app/src/test/java/com/adrian/tsr_app/: ExampleUnitTest.kt
frontend/components/: SignDisplay.tsx
frontend/constants/: Signs.ts  Types.ts  images.ts
frontend/gradle/wrapper/: gradle-wrapper.properties
